# fallcent

./: .gitignore  README.md  TEST.md  TROUBLE_SHOOTING.md  instagram_cookies.json  pyproject.toml
.cursor/rules/: project.mdc  python-common.mdc
app/: coupang_product.py  instagram_reels.py  main.py  utils.py
app/v1/: __init__.py  coupang_product.py  instagram_reels.py
app/v2/: __init__.py  coupang_product.py  instagram_reels.py
configs/: coupang.yaml  instagram.yaml
debug/: instagram_response_1742667336.html  instagram_response_1742667345.html  instagram_response_1742667355.html  instagram_response_1742667363.html  instagram_response_1742667371.html  instagram_response_1742667378.html  instagram_response_1742667386.html  instagram_response_1742667404.html  instagram_response_1742693460.html  instagram_response_1742693464.html  instagram_response_1742693492.html  instagram_response_1742693503.html
results/: coupang_product_urls_20250323_103001.json  instagram_reels_views_20250323_110859.json
