[project]
name = "fallcent"
version = "0.1.0"
description = "쿠팡 상품 크롤링 및 인스타그램 릴스 조회수 추출 도구"
authors = [
    {name = "신춘호",email = "sch0718@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (==2.31.0)",
    "fake-useragent (==1.4.0)",
    "urllib3 (==2.0.7)",
    "pyyaml (==6.0.1)",
    "beautifulsoup4 (==4.12.2)"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fallcent = "fallcent_test:run_cli"

[tool.poetry]
package-mode = false
name = "fallcent"
version = "0.1.0"
description = "웹 크롤링 프로젝트"
authors = ["신춘호 <"sch0718@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyyaml = "^6.0.1"
fake-useragent = "^1.3.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
